[package]
name = "seed-encrypt"
version = "0.1.0"
edition = "2021"

[dependencies]
aes = { version = "0.8.4", features = ["zeroize"] }
anyhow = { version = "1.*", features = ["backtrace"] }
argon2 = { version = "0.5.3", features = ["zeroize"] }
balloon-hash = { version = "0.4.0", features = ["parallel", "zeroize"] }
bip39 = { version = "2.*", features = ["all-languages", "zeroize"] }
clap = { version = "4.*", features = ["derive"] }
dialoguer = { version = "0.*", default-features = false, features = ["fuzzy-select", "password"] }
env_logger = "0.11.*"
humantime = "2.1.0"
libseccomp = { version = "0.3.*", optional = true }
log = "0.4.*"
rand = "0.8.5"
sha2 = "0.10.*"

[features]
default = ["pledge"]
pledge = ["dep:libseccomp"]
